iland.net (archived on 2004-12-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 4749,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.39,
  "homepage_snapshot_redirected_domain": "iland.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20040926014926id_/http://iland.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20040926014926id_/http%3A//iland.net",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "iland.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041208032618id_/http%3A//iland.net/about/privacy.php3",
  "policy_title": "I-Land -- Why Choose I-Land",
  "policy_url": "iland.net/about/privacy.php3",
  "sha1": "0daeb801a7ccf5935a0ea17465c89ce8048cd81b",
  "simhash": 8873779255074077827,
  "simhash_updated": false,
  "site_hostname": "iland.net",
  "site_url": "http://iland.net",
  "smog": 15.16,
  "strict_updated": false,
  "timestamp": "20041208032618",
  "word_count": 755,
  "year": 2004
}

--- a/i/il/ila/iland.net.html
+++ b/i/il/ila/iland.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the iland.net privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610090945id_/http%3A//www.iland.net/about/privacy.php3) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the iland.net privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208032618id_/http%3A//iland.net/about/privacy.php3) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -115,7 +115,7 @@ document.write("</b>");
 
           <td width="100%"><map name="FPMap1">
 
-            <area href="http://www.iland.net/index.php3" coords="3, 0, 61, 23" shape="rect">
+            <area href="http://www.iland.net/" coords="3, 0, 61, 23" shape="rect">
 
             <area href="http://www.iland.net/services/index.php3" coords="79, 0, 169, 23" shape="rect">
 
@@ -143,7 +143,8 @@ document.write("</b>");
 
   </tr>
 
-</tbody></table></td>
+</tbody></table>
+</td>
   </tr>
 </tbody></table>
 <!-- header end -->
@@ -176,6 +177,10 @@ document.write("</b>");
     <img border="0" src="/images/links/lnk_sm_dsl.gif" width="169" height="20"></a></td>
   </tr>
   <tr>
+    <td><a href="/services/access_ispeed.php3">
+    <img border="0" src="/images/links/lnk_sm_ispeed.gif" width="169" height="20"></a></td>
+  </tr>
+  <tr>
     <td><a href="/services/access_wireless.php3">
     <img border="0" src="/images/links/lnk_sm_wire.gif" width="169" height="20"></a></td>
   </tr>
@@ -204,6 +209,10 @@ document.write("</b>");
   <tr>
     <td><a href="/ifilter/faq.php3">
     <img border="0" src="/images/links/link_sm_ifilter.gif" width="169" height="20"></a></td>
+  </tr>
+  <tr>
+    <td><a href="http://websafe.iland.net:81/Public/">
+    <img border="0" src="/images/links/lnk_sm_websafe.gif" width="169" height="20"></a></td>
   </tr>
   <tr>
     <td><a href="/services/emailonly.php3">
