--- a/m/me/med/mediaweek.com.html
+++ b/m/me/med/mediaweek.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the mediaweek.com privacy policy that was archived on 2003-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031205051215id_/http%3A//www.vnuemedia.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mediaweek.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208033829id_/http%3A//www.vnuemedia.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>VNU Business Media USA</title>
+<title>VNU eMedia Inc.</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <script language="JavaScript">
 <!--
@@ -31,7 +31,7 @@ function MM_swapImage() { //v3.0
 </script>
 </head>
 
-<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('images/nav_emedia_about_down.gif','images/home_on.gif','images/news_on.gif','images/newswire_on.gif','images/dailies_on.gif','images/contact_on.gif','images/employ_on.gif','images/sites_on.gif','images/about_on.gif')">
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="MM_preloadImages('images/nav_emedia_about_down.gif','images/home_on.gif','images/news_on.gif','images/newswire_on.gif','images/newsletters_on.gif','images/contact_on.gif','images/employ_on.gif','images/sites_on.gif','images/about_on.gif')">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
     <td width="29%" align="left" valign="top" bgcolor="#003366"><a href="http://www.vnubusinessmedia.com"><img src="images/toplogo_bm_sm.gif" width="300" height="98" border="0"></a></td>
@@ -74,7 +74,10 @@ function MM_swapImage() { //v3.0
 		  <td height="22"><a href="sites" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/sites_on.gif',1)"><img src="images/sites_off.gif" width="168" height="22" border="0" name="Image6"></a></td>
 		</tr>
 		<tr> 
-		  <td height="22"><a href="dailies.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/dailies_on.gif',1)"><img src="images/dailies_off.gif" width="168" height="22" border="0" name="Image7"></a></td>
+		  <td height="22"><a href="dailies.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/newsletters_on.gif',1)"><img src="images/newsletters_off.gif" width="168" height="22" border="0" name="Image7"></a></td>
+		</tr>
+		<tr> 
+		  <td height="22"><a href="http://www.vnuemedia.com/digitalmall/store/index.jsp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image9','','images/digitalmall_on.gif',1)"><img src="images/digitalmall_off.gif" width="168" height="22" border="0" name="Image9"></a></td>
 		</tr>
 		<tr> 
 		  <td height="22"><a href="emedia_about.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/about_on.gif',1)"><img src="images/about_off.gif" width="168" height="22" border="0" name="Image5"></a></td>
@@ -83,7 +86,7 @@ function MM_swapImage() { //v3.0
 		  <td><a href="emedia_contact.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/contact_on.gif',1)"><img src="images/contact_off.gif" width="168" height="22" border="0" name="Image3"></a></td>
 		</tr>
 		<tr> 
-		  <td><a href="emedia_employ.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/employ_on.gif',1)"><img src="images/employ_off.gif" width="168" height="22" border="0" name="Image4"></a></td>
+		  <td><a href="http://63.251.31.24/bm/bm_jobs.nsf/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/employ_on.gif',1)"><img src="images/employ_off.gif" width="168" height="22" border="0" name="Image4"></a></td>
 		</tr>
 		<tr> 
 		  <td><img src="images/770_emedia.jpg" width="168" height="112"></td>
@@ -97,13 +100,13 @@ function MM_swapImage() { //v3.0
 <td width="83%" align="left" valign="top">
 <table width="65%" border="0" cellspacing="0" cellpadding="0">
 		<tbody><tr align="left"> 
-		  <td> <font color="66CC99"><b><font face="Arial, Helvetica, sans-serif" size="3">VNU 
+		  <td> <font face="Arial, Helvetica, sans-serif" color="66CC99"><b><font face="Arial, Helvetica, sans-serif" size="3">VNU 
 			eMedia Privacy Policy</font></b></font></td>
 </tr>
 		<tr align="left"> 
 		  <td valign="top"> 
 <br>
-<font size="2"><b>Revised October 2003</b><br>
+<font face="Arial, Helvetica, sans-serif" size="2"><b>Revised October 2003</b><br>
 <br>
 This site is part of the VNU eMedia ("VNU") network of web sites. Please note that VNU does not pass personally identifiable information of our users to DoubleClick.<br>
 <br>
@@ -165,7 +168,7 @@ We welcome your questions and/or comments. Please send all queries to <a href="m
 			<p>&nbsp;
 			</p><p> 
 			  </p><center>
-				<font size="-2"> © 2003 VNU eMedia, Inc. All rights reserved. 
+				<font face="Arial, Helvetica, sans-serif" size="-2"> © 2004 VNU eMedia, Inc. All rights reserved. 
 				</font>
 			  </center>
 			<p><br>
@@ -178,7 +181,7 @@ We welcome your questions and/or comments. Please send all queries to <a href="m
 <tr>
 <td colspan="3" align="left" valign="top">
 <hr width="100%" size="1">
-	  <p align="center"><font face="Arial, Helvetica, sans-serif" size="1" color="#000000">© 2003 VNU eMedia Inc. All rights reserved. <br>
+	  <p align="center"><font face="Arial, Helvetica, sans-serif" size="1" color="#000000">© 2004 VNU eMedia Inc. All rights reserved. <br>
 		<a href="http://www.vnuemedia.com/terms.html">Terms Of Use</a> and <a href="http://www.vnuemedia.com/privacy.html">Privacy 
 		Policy</a>.</font></p>
 	</td>
