bidselect.com (archived on 2004-12-08)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;realestate",
  "char_count": 8655,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 16.37,
  "homepage_snapshot_redirected_domain": "bidselect.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20041001000605id_/http://www.bidselect.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20041001000605id_/http%3A//bidselect.com",
  "interval": "2004_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "bidselect.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20041208045514id_/http%3A//www.bidselect.com/disclaimers/privacy.asp",
  "policy_title": "Powered by BidSelect.com",
  "policy_url": "bidselect.com/disclaimers/privacy.asp",
  "sha1": "aefa67b20d9afc44721a8b524f430c5493af7970",
  "simhash": 4809838583701453975,
  "simhash_updated": false,
  "site_hostname": "bidselect.com",
  "site_url": "http://bidselect.com",
  "smog": 17.54,
  "strict_updated": false,
  "timestamp": "20041208045514",
  "word_count": 1371,
  "year": 2004
}

--- a/b/bi/bid/bidselect.com.html
+++ b/b/bi/bid/bidselect.com.html
@@ -1,12 +1,13 @@
-<!--The following is the downloaded HTML source of the bidselect.com privacy policy that was archived on 2004-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040602210735id_/http%3A//www.bidselect.com/disclaimers/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bidselect.com privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208045514id_/http%3A//www.bidselect.com/disclaimers/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>Powered by BidSelect.com</title>
+
 	<link href="/css/iepc.css" rel="STYLESHEET" type="text/css">
-	<script language="JavaScript">
+
+<script language="JavaScript">
 	<!--
-	
 	// preloaders for nav image rollovers
 	navhomeon=new Image();
 	navhomeon.src="/images/nav_home_1.gif";
@@ -33,48 +34,30 @@
 	navjoinoff=new Image();
 	navjoinoff.src="/images/nav_joinNow_0.gif";
 	
-	
-	
 	function rollon(image){
 	  document[image].src=eval(image + "on.src")
-	 
 	}
 	
 	function rolloff(image){
 	  document[image].src=eval(image + "off.src")
-	  
 	}
 	
-	
-	
 	//-->
-	</script>
+</script>
 
 </head>
 
 <body leftmargin="0" topmargin="0">
-
-
 <br>
-<!-- Header -->
+<!-- Partner Logo -->
+
 <table cellpadding="0" cellspacing="0" border="0" width="636" align="center">
 	<tbody><tr>
-		<td colspan="4" height="1"><img src="/images/sub_main_cap_top.gif" width="636" height="7" border="0"></td>
-	</tr>
-	<tr>
-		<td width="1" bgcolor="#999999"><img src="/images/c.gif" width="1" height="1" border="0"></td>
-
-			<td width="634" bgcolor="#E8E8E8" align="right"><img src="/images/sm_hbc.gif" alt="Home Buyer Center" border="0"></td>
-
-		<td width="1" bgcolor="#999999"><img src="/images/c.gif" width="1" height="1" border="0"></td>
-	</tr>
-	<tr>
-		<td width="1" bgcolor="#999999"><img src="/images/c.gif" width="1" height="1" border="0"></td>
-		<td bgcolor="#FFFFFF"><img src="/images/c.gif" width="634" height="1" border="0"></td>
-		<td width="1" bgcolor="#999999"><img src="/images/c.gif" width="1" height="1" border="0"></td>
+		<td width="100%"><a href="/default.asp"><img src="/images/banner_bidselect.gif" alt="BidSelect Home" width="636" height="70" border="0"></a></td>
 	</tr>
 </tbody></table>
 
+<!-- Main Nav Bar -->
 <table cellpadding="0" cellspacing="0" border="0" width="636" align="center">
 	<tbody><tr>
 		<td width="1" bgcolor="#999999"><img src="/images/c.gif" width="1" height="1" border="0"></td>
@@ -93,6 +76,8 @@
 		<td width="1" bgcolor="#999999"><img src="/images/c.gif" width="1" height="1" border="0"></td>
 	</tr>
 </tbody></table>
+
+
 
 <!-- Main Content Holder -->
 <table cellpadding="0" cellspacing="0" border="0" width="636" align="center">
@@ -239,7 +224,7 @@ Revised March 1, 2004</strong></font>
 <br>
 <table cellpadding="0" cellspacing="0" border="0" width="636" align="center">
 	<tbody><tr>
-		<td align="left"><a href="https://digitalid.verisign.com/as2/06a4f303853bee74b4b2799512107364" target="_verisign"><img src="/images/Secure-White98x102.gif" width="49" height="50" border="0"></a></td>
+		<td align="left"><a href="https://seal.verisign.com/splash?form_file=fdf/splash.fdf&amp;type=GOLD&amp;sealid=2&amp;dn=WWW.BIDSELECT.COM&amp;lang=en" target="_verisign"><img src="/images/Secure-White98x102.gif" width="49" height="50" border="0"></a></td>
 		<td align="right"><font class="moduleText3">©&nbsp;Copyright 2004 BidSource Technologies™.  All Rights Reserved.</font><br><img src="/images/eho.gif" width="38" height="38" alt="Equal Housing Lender" border="0"></td>
 	</tr>
 </tbody></table>
