--- a/v/va/va./va.gov.html
+++ b/v/va/va./va.gov.html
@@ -1,16 +1,22 @@
-<!--The following is the downloaded HTML source of the va.gov privacy policy that was archived on 2004-06-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040607052213id_/http%3A//www.va.gov/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the va.gov privacy policy that was archived on 2004-12-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041208045955id_/http%3A//www.va.gov/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 FINAL//EN"><html><head>
 
-   <!-- Department of Veterans Affairs-->
-   <!-- Office of IRM-->
-   <!-- Authored by Walt Houser, Date Monday, June 14, 1999-->
-   <!-- Revised by [Name], Date February 22, 2000 -->
-   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>VA Web Site Privacy Policy</title>
-   <meta name="subject" content="VA Web Site Privacy Policy">
-   <meta name="keywords" content="[list of words and phrases, separated by commas, that will be useful for search engines]">
+<!-- Department of Veterans Affairs-->
+<!-- Office of IRM-->
+<!-- Authored by Walt Houser, Date Monday, June 14, 1999-->
+<!-- Revised by [Name], Date February 22, 2000 -->
+<!--Revised by Dolores Fox, VHA Web Solutions, 2/25/04: -->
+<!-- :Updated subject and keywords metadata -->
+<!-- :Added description metadata -->
+<!-- :Fixed links on footer -->
+
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>Privacy &amp; Security</title>
+<meta name="subject" content="Privacy">
+<meta name="keywords" content="privacy, privacy policy, Internet privacy policy, Privacy Act of 1972">
+<meta name="description" content="The Department of Veterans Affairs has an established privacy policy.  It includes: 1) not requiring users to provide personal information; 2) collecting personally identifiable information (name, email address, Social Security number, or other unique identifier) only if specifically and knowingly provided by user; 3) use personally identifying information provided only in connection with VA programs and services or for such other purposes as are described at the point of collection; 4) collect information for statistical purposes and VA sometimes performs analyses of user behavior in order to measure customer interest in the various areas of our site; 5) do not give, sell or transfer any personal information to a third party, and 6) may enable " cookies."="" (a="" file="" placed="" on="" your="" personal="" computer's="" hard="" drive="" by="" a="" web="" site="" that="" allows="" it="" to="" monitor="" use="" of="" the="" site)."="">
 
 </head>
 
@@ -56,7 +62,7 @@
       </tr>
       <tr align="CENTER">
          <td>
-            <a href="Stats.htm" style="text-decoration: none">
+            <a href="stats.htm" style="text-decoration: none">
                <b><font color="#FFFFFF" size="-1" face="Arial,Helvetica,Univers,Zurich BT">
                Information Collected for Statistical Purposes</font></b></a>
          </td>
@@ -95,20 +101,20 @@
       <tr align="CENTER">
          <td><br><br>
             <a href="../index.htm">
-               <img src="../images/lvl3seal.jpg" alt="VA Seal: Return to VA Home Page" width="96" height="94" border="0"></a><br>
+               <img src="../images/lvl3seal.gif" alt="VA Seal: Return to VA Home Page" width="96" height="94" border="0"></a><br>
                <img src="../images/clr_pxl.gif" alt="[skip navigation]" width="142" height="1" border="0"><br>
          </td>
       </tr>
 
       </tbody></table>
 
-<!-- End of stripe content and images>
+<!-- End of stripe content and images -->
 
-   </TD>
+   </td>
 
 <!-- Space between stripe and main text area -->
 
-   </td><td width="25">
+   <td width="25">
                <img src="../images/clr_pxl.gif" alt="[skip navigation]" width="25" height="1" border="0">
    </td>
 
@@ -138,17 +144,15 @@
                <li>You do not have to give us personal information to visit our site.<br>&nbsp;</li> 
                <li>We will collect personally identifiable information (name, email address, Social Security number, or other unique identifier) only if specifically and knowingly provided by you.<br>&nbsp;</li> 
                <li>Personally identifying information you provide will be used only in connection with VA programs and services or for such other purposes as are described at the point of collection.<br>&nbsp;</li> 
-               <li><a href="Stats.htm">Information is collected for statistical purposes</a> and VA sometimes performs analyses of user behavior in order to measure customer interest in the various areas of our site.<br>&nbsp;</li> 
+               <li><a href="stats.htm">Information is collected for statistical purposes</a> and VA sometimes performs analyses of user behavior in order to measure customer interest in the various areas of our site.<br>&nbsp;</li> 
                <li>We do not give, sell or transfer any personal information to a third party.<br>&nbsp;</li> 
                <li>We may enable "<a href="cookies.htm">cookies</a>." A "cookie" is a file placed on your personal computer's hard drive by a Web site that allows it to monitor your use of the site.<br>&nbsp;</li>
             </ul>
 
-         <p>The <a href="http://www.usdoj.gov/04foia/privstat.htm">Privacy Act of 1974</a> applies to all Federal agencies. For information on the Federal government's Web Site Privacy Policy, see the following documents:
-
-            </p><ul>
-               <li><a href="http://cio.gov/docs/webprivl.htm">OMB Memorandum 99-18 "Privacy Policies on Federal Web Sites"</a> dated June 2, 1999<br>&nbsp;</li> 
-               <li><a href="/publ/direc/irm/63004hb.html">VA Handbook 6300.4, Procedures for Processing Requests for Records Subject  to the Privacy Act</a><br>&nbsp;</li> 
-               <li><a href="/publ/direc/irm/63005hb.html">VA Handbook 6300.5, Procedures for Establishing &amp; Managing Privacy Act Systems of Records</a>.<br>&nbsp;</li>
+         <p>The <a href="http://www.usdoj.gov/04foia/privstat.htm">Privacy Act of 1974</a> applies to all Federal agencies. For information on the Federal government's Web Site Privacy Policy, see the following documents:           <br>
+           &nbsp;         
+         </p><ul><li><a href="/publ/direc/irm/63004hb.html">VA Handbook 6300.4, Procedures for Processing Requests for Records Subject  to the Privacy Act</a><br>&nbsp;</li> 
+            <li><a href="/publ/direc/irm/63005hb.html">VA Handbook 6300.5, Procedures for Establishing &amp; Managing Privacy Act Systems of Records</a>.<br>&nbsp;</li>
             </ul>
          </font>
 
@@ -158,23 +162,15 @@
 
       <p>
          <font face="Arial" size="2">
-         <a href="../index.htm" title="Return to the Department of Veterans Affairs home page.">
-               <acronym title="Department of Veterans Affairs">VA</acronym> Home Page</a>&nbsp;/
-         <a href="../search/" title="Search the Department of Veterans Affairs Web site.">
-               Search</a>&nbsp;/ 
-         <a href="../General/site_map.htm" title="Browse through a text site map of the Department of Veterans Affairs Web site.">
-               Site Map</a>&nbsp;/ 
-         <a href="/Facilities" title="Contact information can be found on this site for Department of Veterans Affairs facilities.">
-               Facilities Locator</a>&nbsp;/
-         <a href="../disclaim.htm" title="Read the disclaimers of liability and endorsement.">
-               Disclaimer</a>
+         <a href="http://www.va.gov/" title="Return to the Department of Veterans Affairs home page."><acronym title="Department of Veterans Affairs">VA</acronym> Home Page</a>&nbsp;/
+         <a href="http://www.index.va.gov/search/va/" title="Search the Department of Veterans Affairs Web site.">Search</a>&nbsp;/ 
+         <a href="http://www.va.gov/general/site_map.htm" title="Browse through a text site map of the Department of Veterans Affairs Web site.">Site Map</a>&nbsp;/ 
+         <a href="http://www.va.gov/directory/" title="Contact information can be found on this site for Department of Veterans Affairs facilities.">Facilities Locator</a>&nbsp;/
+         <a href="http://www.va.gov/disclaim.htm" title="Read the disclaimers of liability and endorsement.">Disclaimer</a>
          <br>
-         <a href="../privacy/" title="Read about the privacy policy, which addresses how this site uses cookies.">
-               Privacy &amp; Security Statement</a>&nbsp;/ 
-         <a href="../foia/" title="Browse the electronic Freedom of Information Act reading room.">
-               Freedom of Information Act</a>&nbsp;/ 
-         <a href="../customer/consumer.htm#poc" title="Find e-mail addresses for Department of Veterans Affairs offices.">
-               Contact the <acronym title="Department of Veterans Affairs">VA</acronym></a>
+         <a href="http://www.va.gov/privacy/" title="Read about the privacy policy, which addresses how this site uses cookies.">Privacy &amp; Security Statement</a>&nbsp;/ 
+         <a href="http://www.va.gov/foia/" title="Browse the electronic Freedom of Information Act reading room.">Freedom of Information Act</a>&nbsp;/ 
+         <a href="https://iris.va.gov/" title="Find e-mail addresses for Department of Veterans Affairs offices.">Contact the <acronym title="Department of Veterans Affairs">VA</acronym></a>
          </font>
       </p>
 
@@ -183,7 +179,7 @@
 <!-- Date content was reviewed or updated -->
 
       <p><font size="-1" face="Arial,Helvetica,Univers,Zurich BT">
-            Reviewed/Updated:  May 23, 2000</font></p>
+            Reviewed/Updated:  November 4, 2004</font></p>
 
       <p>&nbsp;</p>
 
