--- a/f/fr/fry/frymulti.com.html
+++ b/f/fr/fry/frymulti.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the frymulti.com privacy policy that was archived on 2005-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051226172158id_/http%3A//www.frymulti.com/privacy/default.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the frymulti.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614192744id_/http%3A//frymulti.com/privacy/default.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>Fry, Inc. - Privacy Policy</title>
