armedforcesloans.com (archived on 2006-06-14)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 4076,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.98,
  "homepage_snapshot_redirected_domain": "armedforcesloans.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402193448id_/http://armedforcesloans.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402193448id_/http%3A//armedforcesloans.com",
  "interval": "2006_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "armedforcesloans.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060614192839id_/http%3A//armedforcesloans.com/privacy.htm",
  "policy_title": "Welcome to Armed Forces Military Loans",
  "policy_url": "armedforcesloans.com/privacy.htm",
  "sha1": "09e23d12c5656f96c9f81852a861f8d9c125a2a6",
  "simhash": 17021240923851486672,
  "simhash_updated": false,
  "site_hostname": "armedforcesloans.com",
  "site_url": "http://armedforcesloans.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060614192839",
  "word_count": 650,
  "year": 2006
}

--- a/a/ar/arm/armedforcesloans.com.html
+++ b/a/ar/arm/armedforcesloans.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the armedforcesloans.com privacy policy that was archived on 2005-03-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20050307172854id_/http%3A//www.armedforcesloans.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the armedforcesloans.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614192839id_/http%3A//armedforcesloans.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 		<title>Welcome to Armed Forces Military Loans</title>
@@ -158,7 +158,8 @@ function MM_swapImage() { //v3.0
 															<strong><font face="Verdana, Arial, Helvetica, sans-serif" color="#990000" size="2"><strong>
 																		702 868 6204</strong></font></strong></font>&nbsp;&nbsp; OR 
 														&nbsp;&nbsp; </strong></font>1-800-706-9676<br>
-												<font face="Verdana, Arial, Helvetica, sans-serif" color="#990000" size="2"><strong>EMAIL:&nbsp;&nbsp;&nbsp;<a class="text" href="mailto:admin@armedforcesloans.com">admin@armedforcesloans.com</a>
+												<font face="Verdana, Arial, Helvetica, sans-serif" color="#990000" size="2"><strong>EMAIL
+                                                Questions:&nbsp;&nbsp;&nbsp;<a class="text" href="mailto:admin@armedforcesloans.com">admin@armedforcesloans.com</a>
 													</strong></font></strong></font></strong></font>
 								<p align="center"><font face="Verdana, Arial, Helvetica, sans-serif" color="#990000" size="2"><a href="index.htm"><strong>Home</strong></a><strong>|</strong><a href="aboutus.htm"><strong>About 
 												Us</strong></a><strong>|</strong><a href="https://www.armedforcesloans.com/application.asp"><strong>Application</strong></a><strong>|</strong><a href="questions.htm"><strong>Questions</strong></a><strong>|</strong><a href="privacy.htm"><strong>Privacy</strong></a></font></p>
