stevespanglerscience.com (archived on 2006-06-14)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;shopping",
  "char_count": 3497,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.68,
  "homepage_snapshot_redirected_domain": "stevespanglerscience.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060402220520id_/http://stevespanglerscience.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060402220520id_/http%3A//stevespanglerscience.com",
  "interval": "2006_A",
  "link_text": "Privacy & Security Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "stevespanglerscience.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060614194740id_/http%3A//www.stevespanglerscience.com/security.php",
  "policy_title": "Privacy and Security Policies - Steve Spangler Science",
  "policy_url": "stevespanglerscience.com/security.php",
  "sha1": "2c9c91c4622a07cb3095b5d2e8e198416789340f",
  "simhash": 5800065581085925421,
  "simhash_updated": true,
  "site_hostname": "stevespanglerscience.com",
  "site_url": "http://stevespanglerscience.com",
  "smog": 12.04,
  "strict_updated": true,
  "timestamp": "20060614194740",
  "word_count": 569,
  "year": 2006
}

--- a/s/st/ste/stevespanglerscience.com.html
+++ b/s/st/ste/stevespanglerscience.com.html
@@ -1,205 +1,97 @@
-<!--The following is the downloaded HTML source of the stevespanglerscience.com privacy policy that was archived on 2005-12-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051229052438id_/http%3A//www.stevespanglerscience.com/security.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stevespanglerscience.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614194740id_/http%3A//www.stevespanglerscience.com/security.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
+    <title>Privacy and Security Policies - Steve Spangler Science </title>
+    <link href="/includes/css/global.css" rel="stylesheet" type="text/css" media="screen">
 
-	<title>Privacy and Security Policies - Steve Spangler Science </title>
+    <link href="/includes/css/print.css" rel="stylesheet" type="text/css" media="print">
+    <meta name="Keywords" content="Steve Spangler Science">
+    <meta name="date" content="Wed, 14 Jun 2006 14:47:39 -0500">
+    <meta name="Description" content="About Steve Spangler Science">
+    <script src="/includes/global.js" type="text/javascript"></script>
 
-	<link href="/includes/css/global.css" rel="stylesheet" type="text/css" media="screen">
-	
-	<link href="/includes/css/print.css" rel="stylesheet" type="text/css" media="print">
-
-	<meta name="Keywords" content="Steve Spangler Science">
-
-	<meta name="date" content="Wed, 28 Dec 2005 23:24:42 -0600">
-
-	<meta name="Description" content="About Steve Spangler Science">
-
-	<script language="javascript" src="/includes/global.js"></script>
-	<script language="JavaScript" src="https://secure.comodo.net/trustlogo/javascript/trustlogo.js" type="text/javascript">
+    <script language="javascript" src="/includes/global.js"></script>
+    <script language="JavaScript" src="https://secure.comodo.net/trustlogo/javascript/trustlogo.js" type="text/javascript">
 </script>
-
 </head>
-
 <body bottommargin="0" marginheight="0">
-
 <div id="nav">
-
 <div id="search" class="nonprint">
-
-<form name="quick_find" method="get" action="/search.php" class="nonprint">
-
-
-	<a href="http://www.stevespanglerscience.com/cart.php" onclick="MM_showHideLayers('LayerEmptyCart','','show')">
-
-
-	Cart</a>&nbsp;&nbsp;&nbsp;
-
-
+<form name="quick_find" method="get" action="http://www.stevespanglerscience.com/search.php" class="nonprint">
+    <a href="http://www.stevespanglerscience.com/cart.php" onclick="MM_showHideLayers('LayerEmptyCart','','show')">
+Cart</a>&nbsp;&nbsp;&nbsp;
 
 <a href="http://www.stevespanglerscience.com/account.php">Account</a>&nbsp;&nbsp;
 
-
-
-
 	<a href="http://www.stevespanglerscience.com/login.php">Log In</a>&nbsp;&nbsp;
 
-
-
-
-
 <a href="http://www.stevespanglerscience.com/checkout.php" onclick="MM_showHideLayers('LayerEmptyCart','','show')">
-
-
 Checkout</a>&nbsp;&nbsp;<br>
-
-
 
 </form></div>
 
-
-
 <div id="searchbox" class="nonprint"><input name="rdSearchType" type="radio" value="catalog" checked=""> Catalog<br>
-
 <input name="rdSearchType" type="radio" value="experiment">Experiment Library<br>
 
-
-
 <input class="input10" size="10" type="text" name="q" value="" maxlength="50" title="enter keywords or product Item Number to search our store" style="margin-left:2px">
-
 <input type="submit" border="0" name="submit" value="Search" alt="Search" align="middle" style="font-size:10px ">
-
 </div>
-
-
-
 
 
 <div id="center">
-
 <div id="top"><a href="http://www.stevespanglerscience.com/index.php"><img src="/images/template/spacer.gif" alt=" Steve Spangler Science Experiments Teacher Training Videos Customer Service Free Newsletter" width="170" height="100" hspace="20" border="0"></a>
-
-  <a href="http://www.stevespangler.com/"><img src="/images/template/spacer.gif" id="imgClear" alt="Steve Spangler blog" width="120" height="100" border="0" style=" margin-left:450px"></a>
-
-
+  <a href="http://www.stevespangler.com"><img src="/images/template/spacer.gif" id="imgClear" alt="Steve Spangler blog" width="120" height="100" border="0" style=" margin-left:450px"></a>
 
 </div>
-
 <div id="navtop">
 <p class="print">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This page has been printed from SteveSpanglerScience.com.  All rights reserved.</p>
 <p class="print"><img src="/images/template/top-print.jpg"></p>
-<div id="print2"><a href="http://www.stevespanglerscience.com/"><img src="/images/template2/home.gif" alt="Steve Spangler Science Home" title="Steve Spangler Science Home" width="59" height="21" border="0"></a>
-
-<a href="http://www.stevespanglerscience.com/experiments/"><img src="/images/template2/experiments.gif" alt="Experiments" title="Steve Spangler Science Experiments" width="98" height="21" border="0"></a>
-
-<a href="http://www.stevespanglerscience.com/teacher_training/"><img src="/images/template2/teacher-training.gif" alt="Teacher Training" title="Teacher Training" width="119" height="21" border="0"></a>
-
-<a href="http://www.9news.com/spangler/" target="_blank"><img src="/images/template2/see-the-vids.gif" alt="See the Videos" title="See the Videos" width="109" height="21" border="0"></a>
-
-<a href="http://www.stevespanglerscience.com/help.php"><img src="/images/template2/customer-service.gif" alt="Customer Service" title="Customer Service" width="125" height="21" border="0"></a>
-
-<a href="http://www.stevespanglerscience.com/newsletter.php"><img src="/images/template2/free-newsletter.gif" alt="Free Newsletter" title="Free Newsletter" width="115" height="21" border="0"></a>
-
-<a href="http://www.stevespangler.com/"><img src="/images/template2/steves-blog.gif" alt="Steves Blog" width="92" height="21" border="0"></a>
+<div id="print2"><a href="http://www.stevespanglerscience.com/"><img src="/images/template2/home.gif" alt="Steve Spangler Science Home" title="Steve Spangler Science Home" width="57" height="21" border="0"></a>
+<a href="http://www.stevespanglerscience.com/experiments/"><img src="/images/template2/experiments.gif" alt="Experiments" title="Steve Spangler Science Experiments" width="115" height="21" border="0"></a>
+<a href="http://www.stevespanglerscience.com/teacher_training/"><img src="/images/template2/teacher-training.gif" alt="Teacher Training" title="Teacher Training" width="113" height="21" border="0"></a>
+<a href="http://www.stevespanglerscience.com/video/"><img src="/images/template2/see-the-vids.gif" alt="See the Videos" title="See the Videos" width="103" height="21" border="0"></a>
+<a href="http://www.stevespanglerscience.com/help.php"><img src="/images/template2/customer-service.gif" alt="Customer Service" title="Customer Service" width="121" height="21" border="0"></a>
+<a href="http://www.stevespanglerscience.com/newsletter.php"><img src="/images/template2/free-newsletter.gif" alt="Free Newsletter" title="Free Newsletter" width="109" height="21" border="0"></a>
+<a href="http://www.stevespangler.com"><img src="/images/template2/steves-blog.gif" alt="Steves Blog" width="93" height="21" border="0"></a>
 </div>
 </div>
-
 <!-- Categories -->
-
 <div id="leftsidenav">
-
-
 <h3 style="margin-top:0px "><a href="http://www.stevespanglerscience.com/category/22/">Science Kits and Toys</a></h3>
-
-
 <a href="http://www.stevespanglerscience.com/category/2/">Books &amp; Resources</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/3/">Chemistry</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/32/">Cool Gifts</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/4/">Science Toys</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/5/">Color</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/6/">Lab Supplies</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/7/">Crystals</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/8/">Density</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/10/">Electricity</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/11/">Energy</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/12/">Force &amp; Motion</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/14/">Light &amp; Sound</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/15/">Magnetism</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/45/">Classroom KIts</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/19/">Solar Science</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/33/">Weather</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/25/">All About Air</a><br>
-
-
-<a href="http://www.stevespanglerscience.com/category/28/">Science Fair</a><br>
-
-
+<a href="http://www.stevespanglerscience.com/category/28/">Science Fair Projects</a><br>
 <a href="http://www.stevespanglerscience.com/category/31/">Ooey Gooey Polymers</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/47/">NEW PRODUCTS!</a><br>
-
-
+<a href="http://www.stevespanglerscience.com/category/54/">INSTA-SNOW</a><br>
+<a href="http://www.stevespanglerscience.com/category/55/">Space</a><br>
 <h3 style="margin-top:0px "><a href="http://www.stevespanglerscience.com/category/20/">Life Science</a></h3>
-
-
 <a href="http://www.stevespanglerscience.com/category/13/">Insects</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/17/">Plants</a><br>
-
-
 <h3 style="margin-top:0px "><a href="http://www.stevespanglerscience.com/category/34/">Specials</a></h3>
-
-
 <a href="http://www.stevespanglerscience.com/category/53/">Gift Certificates</a><br>
-
-
 <a href="http://www.stevespanglerscience.com/category/52/">Amazing Gift Baskets</a><br>
-
-
-
-
 
 
 <!-- shopping cart -->
 
-
-
 <h3><a href="http://www.stevespanglerscience.com/cart.php">Shopping Cart</a></h3>
-
 <p>
 
 Welcome guest
@@ -209,92 +101,52 @@ Welcome guest
 
 
 
-
-
-
-
-
 <h3>&nbsp;&nbsp;&nbsp;Email Newsletter</h3>
-
 <p>
-
 Get the latest <br>
-
 specials and <br>
-
 updates with our <br>
-
 email newsletter!
-
 </p>
 
-
-
-<form method="POST" action="http://www.stevespanglerscience.com/optin.php">
-
+<form method="POST" action="http://email.stevespanglerscience.com/optin.php">
 <!--<input type="hidden" name="gmail_list_key" value="VJrqMTn0JFw@ODY">-->
-<input type="hidden" name="gmail_list_key" value="hmELs+P45kc@ODY">
-
-
+<input type="hidden" name="gmail_list_key" value="rM+HIXdTlo4@NTE">
 <p>first name:
-
 <br><input type="text" name="FIRST_NAME" size="20" class="input7">
-
 <br>last name:
-
 <br><input type="text" name="LAST_NAME" size="20" class="input7">
-
 <br>email address:
-
 <br><input type="text" name="EMAIL" size="20" class="input7">
-
 <br><input type="submit" name="Submit" value="subscribe" class="small">
-
 </p>
-
 </form>
 
-
-
 <h3>&nbsp;&nbsp;&nbsp;Departments</h3>
-
 <a href="http://www.stevespanglerscience.com/help.php">Customer Service</a><br>
-
 <a href="http://www.stevespanglerscience.com/shipping.php">Shipping</a><br>
-
 <a href="http://www.stevespanglerscience.com/security.php" on="">Privacy &amp; Security</a><br>
-
 <a href="http://www.stevespanglerscience.com/guarantee.php">Guarantee</a><br>
-
 <!--<a href="http://www.stevespanglerscience.com/safety.php" >Safety information</a><br>-->
-
 <a href="http://www.stevespanglerscience.com/about.php">About Us</a><br>
-
 <a href="http://www.stevespanglerscience.com/contact.php">Contact Us</a><br>
-
 <a href="http://www.stevespanglerscience.com/newsletter.php">Newsletter</a><br>
-
 <a href="http://www.stevespanglerscience.com/safety.php">Safety Information</a><br>
-
-
+<a href="http://www.stevespanglerscience.com/terms.php">Terms &amp; Conditions</a><br>
 <br>
-
 <br>
-
-
 
 <a href="http://www.stevespanglerscience.com/catalog.php"><img src="/images/template2/cat-ad.jpg" alt="get out free catalog" width="105" height="157" border="0"></a>
 
-
-
-
 </div>
-
 <div id="content">
-
  
 
-<div align="left"><a href="/" class="small">Home </a>&gt; <a href="/help.php" class="small">Help And FAQ &gt;</a> </div><br>
+<!--<div align="left"><a href='/' class=small>Home </a>&gt; <a href='/help.php' class='small'>Help And FAQ ></a> </div><br>-->
+
+<a href="/" class="small">Home </a>&gt; <a href="/help.php" class="small">Customer Service &gt;</a> <a href="/security.php#" class="small">Privacy &amp; Security</a><br><br>
+
+
 
 	<h1> Privacy and Security Policy</h1>
 <p style="float: right;"><img src="/secure_site.gif"></p>
@@ -366,15 +218,14 @@ email newsletter!
 </ul>
 <p align="center"><b><a href="javascript:history.back()">&lt; Back to previous page</a></b></p>
 
-
 </div>
 <br clear="all">
 <div id="footer">
-<p> © 2005 Steve Spangler Science. &nbsp;&nbsp;<a href="http://www.stevespanglerscience.com/security.php">Privacy &amp; Security Policy</a> &nbsp;&nbsp;<a href="http://www.stevespanglerscience.com/terms.php">Legal Statement</a>&nbsp;&nbsp;<a href="http://www.netconcepts.com/">Ecommerce by Netconcepts</a></p>
+<p> © 2006 Steve Spangler Science. &nbsp;&nbsp;<a href="http://www.stevespanglerscience.com/security.php">Privacy &amp; Security Policy</a> &nbsp;&nbsp;<a href="http://www.stevespanglerscience.com/terms.php">Legal Statement</a>&nbsp;&nbsp;<a href="http://www.netconcepts.com/">Ecommerce by Netconcepts</a></p>
 </div>
 
 </div>
-
+<div class="print">© 2003 Steve Spangler, Inc. All Rights Reserved</div>
 
 
 
