--- a/h/ho/hot/hotels-rates.com.html
+++ b/h/ho/hot/hotels-rates.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hotels-rates.com privacy policy that was archived on 2005-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051211095935id_/http%3A//www.hotels-rates.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hotels-rates.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614195936id_/http%3A//www.hotels-rates.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -25,16 +25,16 @@
     <td><img src="/images/topBorder.gif" width="780" height="10"></td>
   </tr>
   <tr> 
-    <td><img src="/images/A1.jpg" width="165" height="50"><img src="/images/A4.jpg" width="8" height="50"><img src="/images/A5.jpg" width="325" height="50"><a href="http://www.hotels-rates.com/"><img src="/images/LogoA.gif" width="282" height="50" border="0"></a></td>
+    <td><img src="/images/E1.jpg" width="165" height="50"><img src="/images/E4.jpg" width="8" height="50"><img src="/images/E5.jpg" width="325" height="50"><a href="http://www.hotels-rates.com/"><img src="/images/LogoE.gif" width="282" height="50" border="0"></a></td>
   </tr>
   <tr> 
     <td><table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr> 
-          <td width="165" valign="top" bgcolor="#DCDBB6"><img src="/images/A2.jpg" width="165" height="8"><img src="/images/A3.jpg" width="165" height="88"> 
+          <td width="165" valign="top" bgcolor="#DCDBB6"><img src="/images/E2.jpg" width="165" height="8"><img src="/images/E3.jpg" width="165" height="88"> 
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
               <tbody><tr> 
                 <td>&nbsp;</td>
-                <td colspan="2" align="center" class="8"><b><font color="005572" face="Arial" size="1">Sunday, December 11, 2005</font></b></td>
+                <td colspan="2" align="center" class="8"><b><font color="005572" face="Arial" size="1">Wednesday, June 14, 2006</font></b></td>
               </tr>
 			  <tr>
                 <td>&nbsp;</td>
@@ -462,7 +462,7 @@
       </tbody></table></td>
   </tr>
   <tr> 
-    <td align="center" bgcolor="#5773A3" class="7White">Copyright 1999-2005 
+    <td align="center" bgcolor="#5773A3" class="7White">Copyright 1999-2006 
       Hotels-Rates.com All Rights Reserved. See <a class="7white" href="http://www.hotels-rates.com/legal.asp">Legal 
       Information</a> and <a class="7white" href="http://www.hotels-rates.com/privacy.asp">Privacy Policy</a></td>
   </tr>
