--- a/s/sr/sri/sri.com.html
+++ b/s/sr/sri/sri.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sri.com privacy policy that was archived on 2005-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051219150510id_/http%3A//www.sri.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sri.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614200620id_/http%3A//sri.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -15,6 +15,12 @@ SRI's Privacy Policy
 
 <link href="/screen.css" media="screen" rel="stylesheet" type="text/css">
 <link href="/print.css" media="print" rel="stylesheet" type="text/css">
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-385281-1";
+urchinTracker();
+</script>
 <script language="JavaScript" type="text/JavaScript">
 <!--
 function MM_swapImgRestore() { //v3.0
@@ -89,7 +95,10 @@ function MM_swapImage() { //v3.0
 <tr><td class="lnavmed">&nbsp;</td><td class="lnavmed"><a href="/about/event.html">SRI in the Community</a></td></tr>
 <tr><td colspan="2" class="h-dotline-blue"></td></tr>
 
-<tr><td class="lnavmed">&nbsp;</td><td class="lnavmed"><a href="/about/patents_and_publications.html">Patents and Publications</a></td></tr>
+<tr><td class="lnavmed">&nbsp;</td><td class="lnavmed"><a href="/about/publications.html">Publications</a></td></tr>
+<tr><td colspan="2" class="h-dotline-blue"></td></tr>
+
+<tr><td class="lnavmed">&nbsp;</td><td class="lnavmed"><a href="/rd/hot.html">Intellectual Property</a></td></tr>
 <tr><td colspan="2" class="h-dotline-blue"></td></tr>
 
 </tbody></table>
@@ -205,7 +214,7 @@ Email:  <a href="mailto:webmaster@sri.com">webmaster@sri.com</a>
 <!-- Footnote Start -->
 <p>&nbsp;</p>
 		  <p class="footnote"><a href="/about">About Us</a>&nbsp;&nbsp;<img src="/images/v-dotline-bot.gif" alt="Vertical divider">&nbsp;&nbsp;<a href="/rd">R&amp;D Divisions</a>&nbsp;&nbsp;<img src="/images/v-dotline-bot.gif" alt="Divider">&nbsp;&nbsp;<a href="/jobs">Careers</a>&nbsp;&nbsp;<img src="/images/v-dotline-bot.gif" alt="Divider">&nbsp;&nbsp;<a href="/news">Newsroom</a>&nbsp;&nbsp;<img src="/images/v-dotline-bot.gif" alt="Divider">&nbsp;&nbsp;<a href="/contact">Contact Us</a><br>
-	    <span class="footnote">©2005 SRI International 333 Ravenswood Avenue, Menlo Park, CA 94025-3493<br>
+	    <span class="footnote">©2006 SRI International 333 Ravenswood Avenue, Menlo Park, CA 94025-3493<br>
       SRI International is an independent, nonprofit corporation. <span class="bnav"><a href="/privacy.html">Privacy policy</a></span></span></p>
 		<p>&nbsp;</p>
 <!-- Footnote end -->	
