--- a/h/he/hen/hennepin.us.html
+++ b/h/he/hen/hennepin.us.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hennepin.us privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231181448id_/http%3A//hennepin.us/vgn/portal/internet/hcdetailmaster/0%2C2300%2C1273__100004243%2C00.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hennepin.us privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614201146id_/http%3A//www.hennepin.us/vgn/portal/internet/hcdetailmaster/0%2C2300%2C1273__100004243%2C00.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; CHARSET=UTF-8">      
@@ -139,7 +139,7 @@
       <td width="100%" valign="top"><a href="/vgn/portal/internet/hcchannelmaster/0,2324,1273,00.html"><img src="/vgn/portal/internet/images/hclogo3.gif" alt="www.Hennepin.us: Your Connection To Hennepin County, Minnesota" width="250" height="83" border="0"></a></td>
 	  <td width="204" align="right" valign="top">
 
-			<img src="/vgn/images/portal/cit_100003649/9/58/152842627banner_wintercreek.gif" alt="Photo of a Winter Creek Scene" width="204" height="83">
+			<img src="/vgn/images/portal/cit_100003649/41/57/155486773stonearchbanner1.gif" alt="Photo of Stone Arch Bridge in Downtown Minneapolis" width="204" height="83">
 			
 	  </td>
       <td width="250" align="right" valign="top"> 
