--- a/t/tu/tue/tuesdaymorning.com.html
+++ b/t/tu/tue/tuesdaymorning.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tuesdaymorning.com privacy policy that was archived on 2005-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051218230624id_/http%3A//www.tuesdaymorning.com/ci/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tuesdaymorning.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614202940id_/http%3A//www.tuesdaymorning.com/ci/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -166,7 +166,7 @@ var imgsrc5 =  Math.floor(Math.random()*30)+1;
 		<a href="../product/product.asp" onmouseover="rollOn(product,'../images/rollover/nav_product_on.gif')" onmouseout="rollOff(product,'../images/rollover/nav_product.gif')"><img src="../images/rollover/nav_product.gif" border="0" alt="" id="product"></a>
 		</div>
 </td>
-<td bgcolor="#F1eae1"><img src="../images/random/general/7.jpg" id="test">&nbsp;&nbsp;<img src="../images/random/general/1.jpg" id="test2">&nbsp;&nbsp;<img src="../images/random/general/22.jpg" id="test3">&nbsp;&nbsp;<img src="../images/random/general/24.jpg" id="test4">&nbsp;&nbsp;<img src="../images/random/general/2.jpg" id="test5"></td>
+<td bgcolor="#F1eae1"><img src="../images/random/general/26.jpg" id="test">&nbsp;&nbsp;<img src="../images/random/general/15.jpg" id="test2">&nbsp;&nbsp;<img src="../images/random/general/3.jpg" id="test3">&nbsp;&nbsp;<img src="../images/random/general/11.jpg" id="test4">&nbsp;&nbsp;<img src="../images/random/general/27.jpg" id="test5"></td>
 
 							</tr>		
 							<tr><!--Frame Title & Content -->
@@ -277,7 +277,7 @@ We use sophisticated encryption and authentication tools to protect the security
 					<td><a href="mailto:custserv@tuesdaymorning.com" class="footer">Contact Us</a></td>
 				</tr>	
 				<tr>
-					<td align="center" colspan="8"><div style="margin-top: 10px;font-size: 10px;">The merchandise shown is representative of the types of treasures found in more than 700 of our locations. <br>©2005 Tuesday Morning. All Rights Reserved.</div></td>
+					<td align="center" colspan="8"><div style="margin-top: 10px;font-size: 10px;">The merchandise shown is representative of the types of treasures found in 762 of our locations. <br>©2006 Tuesday Morning. All Rights Reserved.</div></td>
 				</tr>			
 		</tbody></table>
 </div>
