--- a/a/ab/abs/absolutelyrics.com.html
+++ b/a/ab/abs/absolutelyrics.com.html
@@ -1,10 +1,11 @@
-<!--The following is the downloaded HTML source of the absolutelyrics.com privacy policy that was archived on 2005-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051213023245id_/http%3A//www.absolutelyrics.com/lyrics/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the absolutelyrics.com privacy policy that was archived on 2006-06-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060614214111id_/http%3A//www.absolutelyrics.com/lyrics/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy - Absolute Lyrics</title>
 
 <meta name="keywords" content="lyrics">
+<meta name="description" content="lyrics">
 <link href="/style.css" rel="stylesheet" type="text/css">
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -25,48 +26,8 @@ urchinTracker();
 
 </td></tr><tr><td class="e0" align="center">
 
-
-<script language="javascript">
-var timer;
-function getAbsX(elt) { return (elt.x) ? elt.x : getAbsPos(elt,"Left"); }
-function getAbsY(elt) { return (elt.y) ? elt.y : getAbsPos(elt,"Top"); }
-function getAbsPos(elt,which) {
-	iPos = 0;
-	while (elt != null) {
-		iPos += elt["offset" + which];
-		elt = elt.offsetParent;
-	}
-	return iPos;
-}
-
-function attachbanner(){
-	// Check DOM - IE return object, MZ return function
-	if (typeof(document.getElementById) == 'object' || typeof(document.getElementById) == 'function') { 
-		scrollPos=document.body.scrollTop;
-		borderPos = getAbsY(document.getElementById('topbannerborder'));
-		bannerPos = 2 + scrollPos - borderPos;
-		banner = document.getElementById('topbanner');
-		nowbannerPos = getAbsY(banner);
-		if (bannerPos < 2) {
-			bannerPos = 0;
-			banner.style.textAlign = 'center';
-		}
-		else {
-			banner.style.textAlign = 'right';
-		}
-		banner.style.top = bannerPos;
-		timer = setTimeout('attachbanner()', 50);
-	}
-}
-</script>
-
-
-<div id="topbannerborder" style="position: relative">
-<div id="topbanner" style="position: relative; width: 100%; left: 0px; top: 0px; z-index: 10; text-align: center;">
-
-
 <!-- ============== TOPBAR ================== -->
-<script>
+<script language="JavaScript">
 <!--
 // MaxOnline JavaScript tag for: ABSOLUTE LYRICS
 var randomNum=Math.round(Math.random() * 100000000000);
@@ -77,30 +38,23 @@ document.write('<IMG SRC="http://c4.maxserving.com/iserver/site=6092/area=ros/aa
 document.write('<SCR'+'IPT src=http://c4.maxserving.com/gen.js?site=6092&area=ros&group=topbar&PageID=' + randomNum + '><\/SCR'+'IPT>');
 }
 //-->
-</script><script src="http://c4.maxserving.com/gen.js?site=6092&amp;area=ros&amp;group=topbar&amp;PageID=51727739847"></script>
+</script><script src="http://c4.maxserving.com/gen.js?site=6092&amp;area=ros&amp;group=topbar&amp;PageID=85231404111"></script>
 <noscript>
 <a href="http://c4.maxserving.com/adclick/site=6092/area=ros/aamfmt=normal/aamsz=banner/PageID=1234567" target="_blank">
 <img src="http://c4.maxserving.com/iserver/site=6092/area=ros/aamfmt=normal/aamsz=banner/PageID=1234567" border="0" /></A>
 </noscript>
 
-</div>
-
-
-<br>
-<br>
-</div>
 </td></tr>
 
 <tr><td class="e2" style="border-top: dotted 1px #CF6F00; border-bottom: dotted 1px #CF6F00">
 
-menu : 
+absolute lyrics menu : 
 <a href="/" title="lyrics home">home</a> -
 <a href="/lyrics/top50/" title="top 50 lyrics">top 50 lyrics</a> -
 <a href="/lyrics/top50a/" title="top 50 artists">top 50 artists</a> -
 <a href="/board/" title="lyrics forum">forum</a> -
 <a href="/lyrics/searchpage/" title="advance search">search</a> -
 <a href="/board/viewforum.php?f=6" target="_blank">submit</a> - 
-<a href="/board/viewforum.php?f=5" target="_blank">correct</a> -
 <a href="http://lyric.hit-logo-ringtone.com/" target="_blank" title="polyphonic ringtone &amp; color logo"><b>
 for your mobile</b></a> <sup><font color="yellow"><b>new</b></font></sup> -
 <a href="/lyrics/privacy/">privacy</a>
@@ -259,7 +213,8 @@ In the course of serving advertisements to this site, our third-party advertiser
 <tr><form action="/lyrics/search/" method="GET"></form><td class="e1" bgcolor="#FFCF00" align="center">
 <input type="text" name="q" size="15" maxlength="100" class="form2" value="">
 <input type="submit" value="Go" class="form1"><br>
-<a href="/lyrics/searchpage/" title="advance search lyrics">Advance Search</a>
+<a href="/lyrics/searchpage/" title="advance search lyrics">Advance Search</a><br>
+<a href="/link.html" title="lyrics search box" target="_blank" rel="nofollow">For your Website?</a>
 </td></tr>
 
 </tbody></table>
@@ -286,46 +241,43 @@ google_cpa_choice = "CAAQweaZzgEaCA2ZyYC_NXeAKK2293M";
  
 
 
-<table width="160" cellpadding="0" cellspacing="0" border="0">
-<tbody><tr><td class="e1" bgcolor="#FFCF00" align="center">
-<script language="JavaScript" type="text/javascript">
-	<!--
-	fiSearchFormMaxObj=new Object();
-	fiSearchFormMaxObj.type=1;
-	fiSearchFormMaxObj.clrBdr='#CFCFFF';
-	fiSearchFormMaxObj.clrBg='#E7E7FF';
-	fiSearchFormMaxObj.clrTtlTxt='#000000';
-	fiSearchFormMaxObj.clrTagTxt='#CACAFF';
-	fiSearchFormMaxObj.width='160';
-	fiSearchFormMaxObj.noBorder=false;
-	//-->
-</script>
-<script language="JavaScript" type="text/javascript">
-	<!--	
-	fiSearchFormMaxSetId='AX006092';
-	//-->
-</script>
-<script language="JavaScript" src="http://bfc.myway.com/search/fiSearchMax.js" type="text/javascript"></script>
-<script language="JavaScript" type="text/javascript">
-	<!--
-	if (document.fiSearchForm.searchfor) {
-		searchForm = document.fiSearchForm;
-	}
-	//-->
-</script>
 
 <script language="JavaScript" type="text/javascript">
 	<!--
 	function SearchGo(artist) {
 		if (searchForm) {
-			searchForm.searchfor.value=artist;
-			fiSearchFormMaxSubmit(searchForm);
+			searchForm.q.value=artist;
+			searchForm.submit();
 		}
 	}
 	//-->
 </script>
+
+<!-- Search Google -->
+<table width="160" cellpadding="0" cellspacing="1" border="0" bgcolor="#000000">
+<tbody><tr><form method="get" action="http://www.google.com/custom" target="google_window" name="searchForm" id="searchForm"></form>
+<td class="e1" bgcolor="#ffffff" align="center">
+<table bgcolor="#ffffff">
+<tbody><tr><td nowrap="nowrap" valign="top" align="left" height="32">
+<a href="http://www.google.com/">
+<img src="http://www.google.com/logos/Logo_25wht.gif" border="0" alt="Google" align="middle"></a>
+<br>
+<input type="text" name="q" size="19" maxlength="255" value="" class="e1">
 </td></tr>
-</tbody></table><br>
+<tr><td valign="top" align="left">
+<input type="submit" name="sa" value="Search" class="e1">
+<input type="hidden" name="hl" value="en">
+<input type="hidden" name="client" value="pub-4230952243334764">
+<input type="hidden" name="forid" value="1">
+<input type="hidden" name="channel" value="0279065572">
+<input type="hidden" name="ie" value="ISO-8859-1">
+<input type="hidden" name="oe" value="ISO-8859-1">
+<input type="hidden" name="cof" value="GALT:#008000;GL:1;DIV:#FF9C00;VLC:663399;AH:center;BGC:FFFFFF;LBGC:FF9C00;ALC:0000FF;LC:0000FF;T:000000;GFNT:000066;GIMP:000066;FORID:1;">
+</td></tr></tbody></table>
+
+
+<!-- Search Google -->
+</td></tr></tbody></table><br>
 
 
 <!-- BEGIN SMALL TOP POLYPHONIC -->
@@ -383,84 +335,26 @@ TOP POLYPHONIC</a>
 </tr></tbody></table>
 <div class="e0"><br>
 
-<table width="100%" border="0" cellpadding="2" cellspacing="1" bgcolor="yellow"><tbody><tr><td class="e1" align="center" bgcolor="white">
-
-
-<table width="100%" cellpadding="0" cellspacing="0" border="0"><tbody><tr>
-<td align="center">
-
-<a href="http://www.absolutelyrics.com/phpads/adclick.php?bannerid=281&amp;zoneid=46&amp;source=&amp;dest=http%3A%2F%2Fwww.siamzone.com" target="_blank"><img src="http://www.absolutelyrics.com/phpads/adimage.php?filename=siamzone-468x60_4.gif&amp;contenttype=gif" width="468" height="60" alt="SIAMZONE.COM" title="SIAMZONE.COM" border="0"></a><div id="beacon_281" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.absolutelyrics.com/phpads/adlog.php?bannerid=281&amp;clientid=255&amp;zoneid=46&amp;source=&amp;block=0&amp;capping=0&amp;cb=4e21c7dbff1040c7d074a71ac20d2eca" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div>
-</td></tr></tbody></table>
-
-</td></tr></tbody></table>
+<table width="100%" border="0" cellpadding="2" cellspacing="1" bgcolor="yellow"><tbody><tr><td class="e1" bgcolor="white"><div align="center">
+<a href="http://www.absolutelyrics.com/phpads/adclick.php?bannerid=281&amp;zoneid=46&amp;source=&amp;dest=http%3A%2F%2Fwww.siamzone.com" target="_blank"><img src="http://www.absolutelyrics.com/phpads/adimage.php?filename=siamzone-468x60_4.gif&amp;contenttype=gif" width="468" height="60" alt="SIAMZONE.COM" title="SIAMZONE.COM" border="0"></a><div id="beacon_281" style="position: absolute; left: 0px; top: 0px; visibility: hidden;"><img src="http://www.absolutelyrics.com/phpads/adlog.php?bannerid=281&amp;clientid=255&amp;zoneid=46&amp;source=&amp;block=0&amp;capping=0&amp;cb=d704bbdf6a259cd55d47bf5ce82ed371" width="0" height="0" alt="" style="width: 0px; height: 0px;"></div></div></td></tr></tbody></table>
 <br>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="1" bgcolor="#FF9C00">
 <tbody><tr>
 <td class="e1">
 
-
-<!--ONESTAT SCRIPTCODE START-->
-<!--
-// Modification of this code is not allowed and will permanently disable your account!
-// Account ID : 200931
-// Website URL: http://www.absolutelyrics.com/
-// Copyright (C) 2002-2004 OneStat.com All Rights Reserved
--->
-<div id="OneStatTag"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="center">
-<script language="JavaScript" type="text/javascript">
-<!--
-function OneStat_Pageview()
-{
-    var d=document;
-    var sid="200931";
-    var CONTENTSECTION="privacy";
-    var CUSTOMDATA="";
-    var osp_URL=d.URL;
-    var osp_Title=d.title;
-    var t=new Date();
-    var p="http"+(d.URL.indexOf('https:')==0?'s':'')+"://stat.onestat.com/stat.aspx?tagver=2&sid="+sid;
-    p+="&url="+escape(osp_URL);
-    p+="&ti="+escape(osp_Title);
-    p+="&section="+escape(CONTENTSECTION);
-    p+="&custom="+escape(CUSTOMDATA);
-    p+="&rf="+escape(parent==self?window.document.referrer:top.document.referrer);
-    p+="&tz="+escape(t.getTimezoneOffset());
-    p+="&ch="+escape(t.getHours());
-    p+="&js=1";
-    p+="&ul="+escape(navigator.appName=="Netscape"?navigator.language:navigator.userLanguage);
-    if(typeof(screen)=="object"){
-       p+="&sr="+screen.width+"x"+screen.height;p+="&cd="+screen.colorDepth;
-       p+="&jo="+(navigator.javaEnabled()?"Yes":"No");
-    }
-	p+="&cache="+Math.round(Math.random() * 100000000000);
-    d.write('<A HREF="http://www.onestat.com/aspx/login.aspx?sid='+sid+'" target=_blank><IMG ID="ONESTAT_TAG" BORDER="0" SRC="'+p+'" ALT="This site tracked by OneStat.com. Get your own free website tracker."></A>');
-}
-
-OneStat_Pageview();
-//-->
-</script><a href="http://www.onestat.com/aspx/login.aspx?sid=200931" target="_blank"><img id="ONESTAT_TAG" border="0" src="https://stat.onestat.com/stat.aspx?tagver=2&amp;sid=200931&amp;url=https%3A//web.archive.org/web/20051213023245id_/http%3A//www.absolutelyrics.com/lyrics/privacy/&amp;ti=Privacy%20-%20Absolute%20Lyrics&amp;section=privacy&amp;custom=&amp;rf=&amp;tz=0&amp;ch=5&amp;js=1&amp;ul=en-US&amp;sr=800x600&amp;cd=24&amp;jo=No&amp;cache=48692260728" alt="This site tracked by OneStat.com. Get your own free website tracker."></a>
-<noscript>
-<A HREF="http://www.onestat.com"><IMG BORDER="0" SRC="http://stat.onestat.com/stat.aspx?tagver=2&sid=200931&js=No&" ALT="free tracker"></a><br /><a href="http://www.onestat.com">Free Website Counter</a>
-</noscript>
-</td></tr><tr><td align="center"><div style="DISPLAY: inline; FONT-WEIGHT: bold; FONT-SIZE: 7pt; COLOR: black; FONT-FAMILY: 'Verdana'; HEIGHT: 15px"><a href="http://www.onestat.com" style="text-decoration:none; COLOR: black;" target="_blank">Tracker</a></div></td>
-</tr></tbody></table></div>
-<!--ONESTAT SCRIPTCODE END-->
-
-
-
+<!-- stats -->
 
 
 </td>
 
-<td class="e1" align="right"><br>Host by <a href="http://www.siamzone.com/">www.siamzone.com</a>, Bandwidth by www.inet.co.th<br>Contact us at lyric3_at_siamzone_dot_com<br>
+<td class="e1" align="right"><br>Host by www.siamzone.com, Bandwidth by www.inet.co.th<br>Contact us at lyric3_at_siamzone_dot_com<br>
 
 
 <br></td></tr></tbody></table></div>
 
-<script>
-		timer = setTimeout('attachbanner()', 50);
-</script>
+
+
 
 
 
