adultbouncer.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "adult",
  "char_count": 2078,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.46,
  "homepage_snapshot_redirected_domain": "adultbouncer.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331193645id_/http://adultbouncer.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331193645id_/http%3A//adultbouncer.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "adultbouncer.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615000541id_/http%3A//adultbouncer.com/privacypolicy.php",
  "policy_title": "AdultBouncer.com : Worlds Largest Adult Entertainment Network",
  "policy_url": "adultbouncer.com/privacypolicy.php",
  "sha1": "a48822ec388b688726d93c82583c893626a166fb",
  "simhash": 3099041707520116965,
  "simhash_updated": false,
  "site_hostname": "adultbouncer.com",
  "site_url": "http://adultbouncer.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20060615000541",
  "word_count": 320,
  "year": 2006
}

--- a/a/ad/adu/adultbouncer.com.html
+++ b/a/ad/adu/adultbouncer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adultbouncer.com privacy policy that was archived on 2005-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051214094820id_/http%3A//adultbouncer.com/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adultbouncer.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615000541id_/http%3A//adultbouncer.com/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <base href="http://www.adultbouncer.com/">
@@ -42,6 +42,13 @@ a:active {
 	text-decoration: none;
 	color: #FFFFFF;
 }
+
+a.q {
+	color: #FB6006; 
+	font-weight: bold;  
+	cursor:pointer;
+}
+
 .style1 {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
@@ -85,14 +92,16 @@ body {
 	text-align: justify;
 	padding-right: 17px;
 }
-.signup_lnk {
-
+a.signup_lnk {
+	cursor:pointer;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	color: #AA4617;
 	text-align: justify;
 	font-weight: bold;
+	text-decoration: underline;
 }
+
 .style21 {color: #F27D28}
 .arial12_15 {
 	font-family: Arial, Helvetica, sans-serif;
@@ -132,6 +141,7 @@ body {
 .verdana11_wmsign {
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px;
+	font-weight:bold;
 	color: #FFFFFF;
 }
 .verdana11_lnk {
@@ -318,6 +328,13 @@ body {
   }//-->
 </script>
 
+<!-- Start Tracking Code -->
+<script language="javascript" type="text/javascript">
+var ref   = escape(document.referrer);
+var land  = escape( location.href );
+document.write( '<' + 'script language="javascript" src="https://ads.velcom.com/t.php?u=5&r=' + ref + '&l=' + land + '"><' + '/script>' );
+</script><script language="javascript" src="https://ads.velcom.com/t.php?u=5&amp;r=&amp;l=https%3A//web.archive.org/web/20060615000541id_/http%253A//adultbouncer.com/privacypolicy.php"></script>
+<!-- End Tracking Code -->
 
 <script language="JavaScript" type="text/JavaScript">
 var rd=0;
@@ -420,12 +437,10 @@ if(ns4)_d.write("<scr"+"ipt language=JavaScript src='menu/mmenuns4.js'><\/scr"+"
 <!-- START main.html -->
 
 <table border="0" width="748" align="center" cellpadding="0" cellspacing="0" bgcolor="#000000" class="border">
+	
+
+
 	<tbody><tr>
-		<td colspan="2"><img src="images//head_02.gif" width="748" height="36"></td>
-	</tr>
-
-
-	<tr>
 		<td colspan="2"><img src="images//logo_04.jpg" width="299" height="81"><img src="images//head_05.gif" width="449" height="81"></td>
 	</tr>
 
@@ -501,7 +516,7 @@ if(ns4)_d.write("<scr"+"ipt language=JavaScript src='menu/mmenuns4.js'><\/scr"+"
 		</td>
 	</tr>
 </tbody></table>
-</td><td align="right"><img src="images//foot_05.gif" width="211" height="66"></td></tr></tbody></table></td></tr><tr><td colspan="2" bgcolor="#000000"><img src="images//foot_08.gif" width="748" height="38"></td></tr>
+</td><td align="right"><img src="images//foot_05.gif" width="211" height="66"></td></tr></tbody></table></td></tr>
 			<tr>
 				<td colspan="2" bgcolor="#000000"><div style="text-align: center; margin: 15px 0px; font-family: Verdana,Arial,Helvetica; font-size: 9px; font-weight: normal; color: #666666;">
 						<div style=""><a href="https://secure.adultbouncer.com/termsofuse.html" target="_blank">Terms and Conditions of Use</a>
