cheapflights.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;travel",
  "char_count": 7432,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.28,
  "homepage_snapshot_redirected_domain": "cheapflights.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060401020525id_/http://www.cheapflights.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060401020525id_/http%3A//cheapflights.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "cheapflights.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615001012id_/http%3A//www.cheapflights.com/misc/privacy.html",
  "policy_title": "Privacy policy",
  "policy_url": "cheapflights.com/misc/privacy.html",
  "sha1": "11e8b68ab04ca09bceb66d1b04c6c79207b8c85c",
  "simhash": 2811256365794705730,
  "simhash_updated": true,
  "site_hostname": "cheapflights.com",
  "site_url": "http://cheapflights.com",
  "smog": 13.61,
  "strict_updated": true,
  "timestamp": "20060615001012",
  "word_count": 1181,
  "year": 2006
}

--- a/c/ch/che/cheapflights.com.html
+++ b/c/ch/che/cheapflights.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the cheapflights.com privacy policy that was archived on 2005-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051223200826id_/http%3A//www.cheapflights.com/misc/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cheapflights.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615001012id_/http%3A//www.cheapflights.com/misc/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
 <title>Privacy policy</title>
 <meta name="description" content="Privacy policy,Cheap flights, airline tickets, cheap airline tickets, cheap tickets, flights, cheap flight, airline ticket, cheap airline ticket, cheap ticket, flight">
 <meta name="keywords" content="Privacy policy,cheapflights,cheap flights,flight,flights,airline tickets,cheap airline tickets,discount airfare,discount airline ticket,discount airline tickets,cheap airfare,cheap air fares,plane tickets,cheap plane tickets,air tickets,international flights,cheap international flights,airlines,travel agents,consolidators,low fare airlines">
-<meta name="WT.sv" content="B">
+<meta name="WT.sv" content="A">
 <meta name="WT.cg_n" content="Generic Pages">
 <meta name="WT.cg_s" content="Privacy policy">
 
@@ -21,7 +21,9 @@
 </head>
 
 <body>
-    <script language="Javascript" type="text/JavaScript" src="/scripts/dcs-tag.js"></script><noscript><img alt="" border="0" name="DCSIMG" width="1" height="1" src="http://63.166.181.222/njs.gif?dcsuri=/nojavascript&amp;dcssip=www.cheapflights.com&amp;WT.sp=cfusa&amp;dcsdat=2005122320823117&amp;WT.js=No" /></noscript>
+    
+<script language="Javascript" type="text/JavaScript" src="/scripts/dcs-tag.js"></script><noscript><img alt="" border="0" name="DCSIMGaaa" width="1" height="1" src="http://63.166.181.222/njs.gif?dcsuri=%2Fmisc%2Fprivacy%2Ehtml&amp;dcssip=www.cheapflights.com&amp;dcsref=&amp;WT.sp=cfusa&amp;dcsdat=200661501011242&amp;WT.js=No" /></noscript>
+
 
 
 <div id="navwrapper">
@@ -38,7 +40,7 @@
             <div id="newsletter">Get your Free Deals Alert Newsletter!</div>
         </div>
         <div id="topright">
-            <div id="tab1"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a href="/">Search flights</a></div><div id="tab2"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a href="/book-flights-online.html">Book airline tickets</a></div><div id="tab4"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a style="margin-right: 5px" href="/useful-flight-tools/">Useful flight tools</a></div>
+            <div id="tab1"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a href="/">Search flights</a></div><div id="tab2"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a href="/book-flights-online.html">Book airline tickets</a></div><div id="tab3"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a href="/handpicked-deals/">Handpicked deals</a></div><div id="tab4"><img alt="" src="/images/hnav-us-sitenav-sep.gif"><a style="margin-right: 5px" href="/useful-flight-tools/">Useful flight tools</a></div>
         </div>
         <div id="bottomleft">
 			<form id="navemailform" name="navemailform" action="/email-alerts/index.html" method="post">
@@ -141,12 +143,19 @@ Boston Massachusetts 02110<br>
         </td>
         <td width="30">
             &nbsp;</td>
-        <td align="right" valign="top">
-				<script language="JavaScript" type="text/javascript" src="http://s0b.bluestreak.com/ix.e?jss&amp;wmode=Window&amp;s=655559&amp;u=&amp;n=;cltk="></script>
-				<noscript><a href="http://s0b.bluestreak.com/ix.e?hr&amp;s=655559" target="_top"><img src="http://s0b.bluestreak.com/ix.e?ir&amp;s=655559" border=0 alt=""></a></noscript><br>
-                <img src="/nocache/trk-aa-banner.gif" width="1" height="1"> 
-                <br>
-            <div id="badge"></div></td>
+        <td style="padding-top:15px" align="right" valign="top">
+            
+            <iframe src="http://ad.doubleclick.net/adi/N1823.CheapFlights/B1846573.3;sz=120x600;ord=93964130?" width="120" height="600" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000">
+            <script type="text/javascript" language='JavaScript1.1' src="http://ad.doubleclick.net/adj/N1823.CheapFlights/B1846573.3;abr=!ie;sz=120x600;ord=93964130?"></script>
+            <noscript>
+            <a href="http://ad.doubleclick.net/jump/N1823.CheapFlights/B1846573.3;abr=!ie4;abr=!ie5;sz=120x600;ord=93964130?">
+            <img src="http://ad.doubleclick.net/ad/N1823.CheapFlights/B1846573.3;abr=!ie4;abr=!ie5;sz=120x600;ord=93964130?" border="0" width="120" height="600" alt="Click Here" /></a>
+            </noscript>
+            </iframe>
+	        <img src="/nocache/trk-us-universal.gif" alt="" width="1" height="1">
+            <br>
+            <div id="badge"></div>
+        </td>
     </tr>
 </tbody></table>
 <br>
@@ -166,13 +175,11 @@ Boston Massachusetts 02110<br>
 	<div id="linkrowCFUS">
 			<p><a href="http://www.cheapflights.co.uk/">Cheap flights</a> (UK &amp; Ireland)<span class="sep">|</span>
 			<a href="http://www.cheapholidaydeals.co.uk/">Cheap Holidays</a><span class="sep">|</span>
-			<a href="http://www.cheapshortbreaks.co.uk/">Short Breaks</a><span class="sep">|</span>
 			<a href="http://www.cheapaccommodation.com/">Discount Hotels</a><span class="sep">|</span>
 			<a href="/international/">International departures</a></p>
 	</div>
-	
 	<div id="linkrowCFUS2">
-			<p><span id="copyright">© 2003 - 2005 Cheapflights (USA) Inc&nbsp;&nbsp;All rights reserved</span>
+			<p><span id="copyright">© 2003 - 2006 Cheapflights (USA) Inc&nbsp;&nbsp;All rights reserved</span>
             <a onmouseover="window.status='Bookmark Us'; return true" onmouseout="window.status=' '; return true" href="javascript:addBookmark();">Bookmark Us</a><span class="sep">|</span>
 			<a href="/misc/privacy.html">Privacy Policy</a>
 			<span class="sep">|</span>
